--- a/quaiAntique/src/index.html
+++ b/quaiAntique/src/index.html
@@ -20,6 +20,10 @@
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Quai Antique est le meilleur restaurant de Savoie sur la raclette et la fondue bourguigonnne et savoyard"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
